--- a/hw4/hw4-q2.ipynb
+++ b/hw4/hw4-q2.ipynb
@@ -6,18 +6,7 @@
    "metadata": {},
    "source": [
     "# Homework 4: Unsupervised Learning\n",
-    "Andrew Corum, Brendan Mcshane\n",
-    "\n",
-    "## Question 1\n",
-    "About a week ago, Brendan and I decided how to split up the work (Brendan takes Q1, I answer Q2). \n",
-    "\n",
-    "On Monday, 4/19, Brendan told me that he was nearly done with Q1. However, I have not heard back from him in the last two days.\n",
-    "\n",
-    "I didn't complete Q1 by myself because I was under the impression that Brendan would be able to show me his results today. But it seems I am out of time to work on this.\n",
-    "\n",
-    "I might send you (Dr Willimamson and Junyi) an email to see what I should do. If I could have an extra day to work on the homework, then I would be able to answer Q1 myself and turn in a full assignment. Or is there another solution you can think of? I understand if the deadline needs to stay fixed at 4/21 11:59pm. But, if possible, I would like to avoid getting an unnexpected 50% on this assignment.\n",
-    "\n",
-    "Sorry for the trouble. This was a very hard issue to forsee since I had communication with Brendan for a while... but then no communication right before the deadline."
+    "Andrew Corum, Brendan Mcshane"
    ]
   },
   {
